fix video-overlay z-index

--- a/vocativ-darknet-microsite/client/styles/episodesgallery.scss
+++ b/vocativ-darknet-microsite/client/styles/episodesgallery.scss
@@ -5,7 +5,8 @@ $shadowColor: $BLACK;
 $scrollBackgroundColor: $BLACK;
 $scrollBreakpoint: breakpoint(medium);
 
-$scrollZIndex: 1;
+$miniGalleryZIndex: 1;
+$scrollZIndex: 2;
 
 .episodes-mini-gallery {
   background: $backgroundColor;
@@ -18,6 +19,8 @@ $scrollZIndex: 1;
   position: fixed;
   bottom: 0;
   left: 0;
+
+  z-index: $miniGalleryZIndex;
 
   &.non-fixed {
     position: absolute;
